kubernetes/testnet/service.yml
apiVersion: v1
kind: Service
metadata:
  name: testnet-casperhaproxy-service
spec:
  ports:
    - name: web
      port: 80
      targetPort: 8500
  selector:
    app: testnet-casperhaproxy
status:
  loadBalancer: { }
